--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@
 
 # "temporary" build files
 /target
+
+# Ignore Gradle project-specific cache directory
+.gradle
+gradle
+
+# Ignore Gradle build output directory
+build
+.idea
+
